--- a/src/main/resources/templates/domain/article/article/detail.html
+++ b/src/main/resources/templates/domain/article/article/detail.html
@@ -1,2 +1,7 @@
 <h1 th:text="${article.title}"></h1>
 <div th:text="${article.body}"></div>
+
+<form th:action="@{|/articleComment/create/${article.id}|}" method="post">
+    <textarea name="content" id="content" rows="15"></textarea>
+    <input type="submit" value="답변등록">
+</form>
