--- a/src/main/resources/templates/domain/article/article/detail.html
+++ b/src/main/resources/templates/domain/article/article/detail.html
@@ -1,6 +1,13 @@
 <h1 th:text="${article.title}"></h1>
 <div th:text="${article.body}"></div>
 
+<h5 th:text="|${#lists.size(article.answerList)}개의 답변이 있습니다.|"></h5>
+<div>
+    <ul>
+        <li th:each="articleComment : ${article.answerList}" th:text="${articleComment.content}"></li>
+    </ul>
+</div>
+
 <form th:action="@{|/articleComment/create/${article.id}|}" method="post">
     <textarea name="content" id="content" rows="15"></textarea>
     <input type="submit" value="답변등록">
