--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -4,11 +4,11 @@
 <h5 th:text="|${#lists.size(post.commentList)}개의 답변이 있습니다.|"></h5>
 <div>
     <ul>
-        <li th:each="postComment : ${post.answerList}" th:text="${comment.content}"></li>
+        <li th:each="comment : ${post.commentList}" th:text="${comment.content}"></li>
     </ul>
 </div>
 
-<form th:action="@{|/comment/create/${post.id}|}" method="post">
+<form th:action="@{|/comment/write/${post.id}|}" method="post">
     <textarea name="content" id="content" rows="15"></textarea>
     <input type="submit" value="답변등록">
 </form>
