--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -8,7 +8,7 @@
     <tbody>
     <tr th:each="post : ${postList}">
         <td>
-            <a th:href="@{|/post/detail/${post.id}|}" th:text="${post.title}"></a>
+            <a th:href="@{|/post/${post.id}|}" th:text="${post.title}"></a>
         </td>
         <td th:text="${post.createDate}"></td>
     </tr>
