--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" th:href="@{/style.css}">
 <h1 th:text="${post.title}"></h1>
 <div th:text="${post.body}"></div>
 
