--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -1,16 +1,21 @@
-<table>
-    <thead>
-    <tr>
-        <th>제목</th>
-        <th>작성일시</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="post : ${postList}">
-        <td>
-            <a th:href="@{|/post/${post.id}|}" th:text="${post.title}"></a>
-        </td>
-        <td th:text="${post.createDate}"></td>
-    </tr>
-    </tbody>
-</table>
+<html layout:decorate="~{domain/global/layout}">
+
+<div layout:fragment="content" class="p-2">
+    <table>
+        <thead>
+        <tr>
+            <th>제목</th>
+            <th>작성일시</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="post : ${postList}">
+            <td>
+                <a th:href="@{|/post/${post.id}|}" th:text="${post.title}"></a>
+            </td>
+            <td th:text="${post.createDate}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
+</html>
