--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -8,16 +8,28 @@
         <span th:text="${post.title}"></span>
     </div>
     <div class="mt-2" th:text="${post.body}"></div>
-    <div class="mt-2" th:text="|${#lists.size(post.commentList)}개의 답변이 있습니다.|"></div>
-    <div>
+    <!--<div>
         <ul class="list-outside list-disc ...">
             <li th:each="comment : ${post.commentList}" th:text="${comment.content}"></li>
         </ul>
+    </div>-->
+    <div class="overflow-x-auto mt-5">
+        <table class="table">
+            <thead>
+            <tr th:text="|${#lists.size(post.commentList)}개의 답변이 있습니다.|">
+                <th>제목</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="comment : ${post.commentList}">
+                <td th:text="${comment.content}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-
-    <form th:action="@{|/comment/write/${post.id}|}" method="post">
+    <form th:action="@{|/comment/write/${post.id}|}" method="post" class="mt-5">
         <textarea name="content" id="content" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500"></textarea>
-        <i class="fa-solid fa-pen"></i> <input type="submit" value="답변등록"></input>
+        <input type="submit" class="mt-5 btn btn-outline" value="답변등록">
     </form>
 </div>
 </html>
