--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -9,7 +9,7 @@
         </tr>
         </thead>
         <tbody>
-        <tr th:each="post : ${postList}">
+        <tr class="hover" th:each="post : ${postList}">
             <td>
                 <a th:href="@{|/post/${post.id}|}" th:text="${post.title}"></a>
             </td>
@@ -17,6 +17,6 @@
         </tr>
         </tbody>
     </table>
-    <a th:href="@{/question/create}" class="mt-5 btn btn-primary">질문 등록하기</a>
+    <a th:href="@{/question/create}" class="mt-5 btn btn-outline">질문 등록하기</a>
 </div>
 </html>
