--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -17,6 +17,6 @@
         </tr>
         </tbody>
     </table>
-    <a th:href="@{/question/create}" class="mt-5 btn btn-outline">질문 등록하기</a>
+    <a th:href="@{/post/write}" class="mt-5 btn btn-outline">질문 등록하기</a>
 </div>
 </html>
