--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -27,8 +27,11 @@
             </tbody>
         </table>
     </div>
-    <form th:action="@{|/comment/write/${post.id}|}" method="post" class="mt-5">
-        <textarea name="content" id="content" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
+    <form th:action="@{|/comment/write/${post.id}|}" th:object="${commentForm}" method="post" class="mt-5">
+        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
+            <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
+        </div>
+        <textarea th:field="*{content}" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
         <input type="submit" class="mt-5 btn btn-outline" value="답변등록">
     </form>
 </div>
