--- a/src/main/resources/templates/domain/post/post/write.html
+++ b/src/main/resources/templates/domain/post/post/write.html
@@ -8,11 +8,11 @@
         </div>
         <div class="mb-3">
             <label for="title" class="form-label">제목</label>
-            <input type="text" name="title" id="title" class="form-control border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md">
+            <input type="text" th:field="*{title}" name="title" id="title" class="form-control border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md">
         </div>
         <div class="mb-3">
             <label for="body" class="form-label">내용</label>
-            <textarea name="body" id="body" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
+            <textarea name="body" th:field="*{body}" id="body" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
         </div>
         <!--<label for="isPublished" class="form-label">Published</label>
         <input type="checkbox" id="isPublished" name="isPublished" value="true">-->
