feat : form_errors

--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -1,4 +1,4 @@
-<html layout:decorate="~{domain/global/layout}">
+<html layout:decorate="~{domain/global/layout/layout}">
 
 <div layout:fragment="content" class="overflow-x-auto" >
     <table class="table">
