--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -1,11 +1,11 @@
-<html layout:decorate="~{domain/global/layout}">
+<html layout:decorate="~{domain/global/layout/layout}">
 
 <div layout:fragment="content" class="p-2">
     <h1 class="font-bold text-center mb-2"><i class="fa-regular fa-newspaper"></i> 글 내용</h1>
 
     <div class="mt-2">
         <div class="badge badge-outline" th:text="${post.id}">default</div>
-        <span th:text="${post.title}"></span>
+        <span th:text="${domain/global/error/post.title}"></span>
     </div>
     <div class="mt-2" th:text="${post.body}"></div>
     <!--<div>
@@ -28,9 +28,7 @@
         </table>
     </div>
     <form th:action="@{|/comment/write/${post.id}|}" th:object="${commentForm}" method="post" class="mt-5">
-        <div class="alert alert-danger" role="alert" th:if="${#fields.hasAnyErrors()}">
-            <div th:each="err : ${#fields.allErrors()}" th:text="${err}" />
-        </div>
+        <div th:replace="~{domain/global/error/form_errors :: formErrorsFragment}"></div>
         <textarea th:field="*{content}" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
         <input type="submit" class="mt-5 btn btn-outline" value="답변등록">
     </form>
