--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -18,29 +18,30 @@
         </tbody>
     </table>
     <!--페이징 시작-->
-    <div th:if="${!paging.isEmpty()}">
-        <ul class="pagination justify-content-center">
+    <div class="join flex items-center justify-center" th:if="${!paging.isEmpty()}" >
+        <ul class="pagination flex justify-center">
             <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
                 <a class="page-link"
                    th:href="@{|?page=${paging.number-1}|}">
-                    <span>이전</span>
+                    <button class="join-item btn btn-outline">이전</button>
                 </a>
             </li>
             <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
                 th:if="${page >= paging.number-5 and page <= paging.number+5}"
                 th:classappend="${page == paging.number} ? 'active'"
                 class="page-item">
-                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+                <button  th:text="${page}" class="join-item btn btn-outline" th:href="@{|?page=${page}|}"></button >
             </li>
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
                 <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
-                    <span>다음</span>
+                    <button class="join-item btn btn-outline">다음</button>
                 </a>
             </li>
         </ul>
     </div>
     <!--페이징 끝-->
-
-    <a th:href="@{/post/write}" class="mt-5 btn btn-outline">질문 등록하기</a>
+    <div>
+        <a th:href="@{/post/write}" class="mt-5 btn btn-outline">질문 등록하기</a>
+    </div>
 </div>
 </html>
