--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -14,6 +14,10 @@
             <td th:text="${post.id}"></td>
             <td>
                 <a th:href="@{|/post/${post.id}|}" th:text="${post.title}"></a>
+                <span class="text-red-500 small ms-2"
+                      th:if="${#lists.size(post.commentList) > 0}"
+                      th:text="${#lists.size(post.commentList)}">
+                    </span>
             </td>
             <td th:text="${post.createDate}"></td>
         </tr>
