--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -5,7 +5,7 @@
 
     <div class="mt-2">
         <div class="badge badge-outline" th:text="${post.id}">default</div>
-        <span th:text="${domain/global/error/post.title}"></span>
+        <span th:text="${post.title}"></span>
     </div>
     <div class="mt-2" th:text="${post.body}"></div>
     <!--<div>
