--- a/src/main/resources/templates/domain/global/layout/layout.html
+++ b/src/main/resources/templates/domain/global/layout/layout.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="navbar-center">
-        <a href="/static" class="btn btn-ghost text-xl">SIMPLE</a>
+        <a href="/post/list" class="btn btn-ghost text-xl">SIMPLE</a>
     </div>
     <div class="navbar-end">
 
