--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -3,22 +3,24 @@
 <div layout:fragment="content" class="overflow-x-auto" >
     <table class="table">
         <thead>
-        <tr>
+        <tr class="text-center">
             <th>번호</th>
             <th>제목</th>
+            <th>글쓴이</th>
             <th>작성일시</th>
         </tr>
         </thead>
         <tbody>
-        <tr class="hover" th:each="post : ${paging}">
+        <tr class="hover text-center" th:each="post : ${paging}">
             <td th:text="${post.id}"></td>
-            <td>
+            <td class="text-start">
                 <a th:href="@{|/post/${post.id}|}" th:text="${post.title}"></a>
                 <span class="text-red-500 small ms-2"
                       th:if="${#lists.size(post.commentList) > 0}"
                       th:text="${#lists.size(post.commentList)}">
                     </span>
             </td>
+            <td><span th:if="${post.member != null}" th:text="${post.member.username}"></span></td>
             <td th:text="${post.createDate}"></td>
         </tr>
         </tbody>
