--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -3,14 +3,7 @@
 <div layout:fragment="content" class="p-2">
     <h1 class="font-bold text-center mb-2"><i class="fa-regular fa-newspaper"></i> 글 내용</h1>
 
-    <!--<div class="mt-2">
-        <span th:text="${post.title}"></span>
-        <div class="mb-2">
-            <span th:if="${post.member != null}" th:text="${post.member.username}"></span>
-        </div>
-    </div>
-    <div class="mt-2" th:text="${post.body}"></div>-->
-
+    <!--글-->
     <div class="border border-black p-4 rounded-lg">
         <h2 class="text-2xl font-bold mb-2" th:text="${post.title}"></h2>
         <p class="text-gray-700 whitespace-pre-line" th:text="${post.body}"></p>
@@ -20,7 +13,14 @@
             </div>
             <div class="text-right" th:text="${#temporals.format(post.createDate, 'yyyy-MM-dd HH:mm')}"></div>
         </div>
+        <div class="my-3 text-right">
+            <a th:href="@{|/post/modify/${post.id}|}" class="btn btn-sm btn-outline-secondary"
+               sec:authorize="isAuthenticated()"
+               th:if="${post.member != null and #authentication.getPrincipal().getUsername() == post.member.username}"
+               th:text="수정"></a>
+        </div>
     </div>
+
     <!--답변 시작-->
     <div class="text-xl font-bold mb-2 mt-5" th:text="|${#lists.size(post.commentList)}개의 답변이 있습니다.|"></div>
     <div th:each="comment : ${post.commentList}" class="overflow-x-auto mt-5 border border-black p-4 rounded-lg mb-2">
