--- a/src/main/resources/templates/domain/post/post/write.html
+++ b/src/main/resources/templates/domain/post/post/write.html
@@ -2,8 +2,9 @@
 
 <div layout:fragment="content" class="p-2">
     <h1 class="font-bold text-center mb-2"><i class="fa-solid fa-pen"></i> 게시물 작성</h1>
-    <form th:action="@{/post/write}" th:object="${postForm}" method="post" class="mt-5">
+    <form th:object="${postForm}" method="post" class="mt-5">
         <div th:replace="~{domain/global/error/form_errors :: formErrorsFragment}"></div>
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div class="mb-3">
             <label for="title" class="form-label">제목</label>
             <input type="text" th:field="*{title}" name="title" id="title" class="form-control border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md">
