--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -18,7 +18,12 @@
                sec:authorize="isAuthenticated()"
                th:if="${post.member != null and #authentication.getPrincipal().getUsername() == post.member.username}"
                th:text="수정"></a>
+            <a href="javascript:void(0);" th:data-uri="@{|/post/delete/${post.id}|}"
+               class="delete btn btn-sm btn-outline-secondary" sec:authorize="isAuthenticated()"
+               th:if="${post.member != null and #authentication.getPrincipal().getUsername() == post.member.username}"
+               th:text="삭제"></a>
         </div>
+
     </div>
 
     <!--답변 시작-->
