--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -36,6 +36,12 @@
             </div>
             <div class="text-right" th:text="${#temporals.format(post.createDate, 'yyyy-MM-dd HH:mm')}"></div>
         </div>
+        <div class="my-3">
+            <a th:href="@{|/comment/modify/${answer.id}|}" class="btn btn-sm btn-outline-secondary"
+               sec:authorize="isAuthenticated()"
+               th:if="${answer.author != null and #authentication.getPrincipal().getUsername() == answer.author.username}"
+               th:text="수정"></a>
+        </div>
     </div>
     <!--입력된 답변 끝-->
     <form th:action="@{|/comment/write/${post.id}|}" th:object="${commentForm}" method="post" class="mt-5">
