--- a/src/main/resources/templates/domain/post/post/write.html
+++ b/src/main/resources/templates/domain/post/post/write.html
@@ -14,7 +14,7 @@
             <textarea name="body" th:field="*{body}" id="body" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
         </div>
         <label for="isPublished" class="form-label">Published</label>
-        <input type="checkbox" th:field="*{isPublished}" id="isPublished" name="isPublished" value="true">
+        <input type="checkbox" th:field="*{published}" id="isPublished" name="isPublished" value="true">
         <br>
         <input type="submit" class="mt-5 btn btn-outline" value="저장하기">
     </form>
