--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -14,6 +14,11 @@
             <div class="text-right" th:text="${#temporals.format(post.createDate, 'yyyy-MM-dd HH:mm')}"></div>
         </div>
         <div class="my-3 text-right">
+            <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
+               th:data-uri="@{|/post/like/${post.id}|}">
+                추천
+                <span class="badge rounded-pill bg-success" th:text="${#lists.size(post.like)}"></span>
+            </a>
             <a th:href="@{|/post/modify/${post.id}|}" class="btn btn-sm btn-outline-secondary"
                sec:authorize="isAuthenticated()"
                th:if="${post.member != null and #authentication.getPrincipal().getUsername() == post.member.username}"
