feat : post cancel like

--- a/src/main/resources/templates/domain/global/layout/layout.html
+++ b/src/main/resources/templates/domain/global/layout/layout.html
@@ -81,6 +81,15 @@
             };
         });
     });
+
+    const recommendCancel_elements = document.getElementsByClassName("recommendCancel");
+    Array.from(recommendCancel_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            if(confirm("정말로 추천 취소하시겠습니까?")) {
+                location.href = this.dataset.uri;
+            };
+        });
+    });
 </script>
 
 
