feat : post viewCount

--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -9,9 +9,14 @@
         <p class="text-gray-700 whitespace-pre-line" th:text="${post.body}"></p>
         <div class=" items-center mb-4">
             <div class="text-right">
-                <span th:if="${post.member != null}" th:text="${post.member.username}"></span>
+                <span>조회수 : </span><span th:text="${post.viewCount}"></span>
             </div>
-            <div class="text-right" th:text="${#temporals.format(post.createDate, 'yyyy-MM-dd HH:mm')}"></div>
+            <div class="text-right">
+                <span>작성자 : <span th:if="${post.member != null}" th:text="${post.member.username}"></span></span>
+            </div>
+            <div class="text-right" >
+                <span>생성 날짜 : <span th:text="${#temporals.format(post.createDate, 'yyyy-MM-dd HH:mm')}"></span></span>
+            </div>
         </div>
         <div class="my-3 text-right">
             <a href="javascript:void(0);" class="recommend btn btn-sm btn-outline-secondary"
