--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -5,7 +5,7 @@
 
 
     <!-- ROLE_PAID 권한을 가진 사용자만 볼 수 있는 내용 -->
-    <div th:if="${#authorization.expression('hasRole(''ROLE_PAID'')')}">
+    <div th:if="${paid}">
         <div class="border border-black p-4 rounded-lg">
             <h2 class="text-2xl font-bold mb-2" th:text="${post.title}"></h2>
             <p class="text-gray-700 whitespace-pre-line" th:text="${post.body}"></p>
@@ -73,7 +73,7 @@
     </div>
 
     <!-- ROLE_PAID 권한이 없는 사용자만 볼 수 있는 내용 -->
-    <div th:unless="${#authorization.expression('hasRole(''ROLE_PAID'')')}">
+    <div th:unless="${paid}">
         <div class="flex justify-center items-center min-h-screen">
             <span class="text-center">이 글은 유료멤버십전용 입니다.</span>
         </div>
