--- a/src/main/resources/templates/domain/post/comment/write.html
+++ b/src/main/resources/templates/domain/post/comment/write.html
@@ -1,16 +1,33 @@
 <html layout:decorate="~{domain/global/layout/layout}">
 
 <div layout:fragment="content" class="p-2">
+    <body>
     <h1 class="font-bold text-center mb-2"><i class="fa-solid fa-pen"></i> 댓글 수정</h1>
-    <form th:object="${commentForm}" method="post" class="mt-5">
-        <div th:replace="~{domain/global/error/form_errors :: formErrorsFragment}"></div>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-        <div class="mb-3">
-            <label for="body" class="form-label">내용</label>
-            <textarea name="body" th:field="*{content}" id="body" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
-        </div>
-        <br>
-        <input type="submit" class="mt-5 btn btn-outline" value="저장하기">
-    </form>
+
+        <form th:object="${commentForm}" method="post" class="mt-5">
+            <div th:replace="~{domain/global/error/form_errors :: formErrorsFragment}"></div>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+            <div id="content" class="mb-3">
+                <label for="body" class="form-label">내용</label>
+                <textarea name="body" th:field="*{content}" id="body" rows="15" class="border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md"></textarea>
+            </div>
+            <br>
+            <!-- TUI 에디터 JS CDN -->
+            <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+            <script>
+                const editor = new toastui.Editor({
+                    el: document.querySelector('#body'), // 에디터를 적용할 요소 (컨테이너)
+                    height: '500px',                        // 에디터 영역의 높이 값 (OOOpx || auto)
+                    initialEditType: 'markdown',            // 최초로 보여줄 에디터 타입 (markdown || wysiwyg)
+                    initialValue: '내용을 입력해 주세요.',     // 내용의 초기 값으로, 반드시 마크다운 문자열 형태여야 함
+                    previewStyle: 'vertical'                // 마크다운 프리뷰 스타일 (tab || vertical)
+                });
+            </script>
+
+            <input type="submit" class="mt-5 btn btn-outline" value="저장하기">
+        </form>
+
+    </body>
+
 </div>
 </html>
