feat : 레이아웃 정리

--- a/src/main/resources/templates/domain/global/layout/layout.html
+++ b/src/main/resources/templates/domain/global/layout/layout.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="navbar-center">
-        <a href="/post/list" class="btn btn-ghost text-xl">SIMPLE</a>
+        <a href="/post/list" class="btn btn-ghost text-xl">MEDIUM</a>
     </div>
     <div class="navbar-end">
 
