--- a/src/main/resources/templates/domain/home/home/adm/main.html
+++ b/src/main/resources/templates/domain/home/home/adm/main.html
@@ -1,1 +1,8 @@
-관리자 홈
+<html layout:decorate="~{domain/global/layout/admLayout}">
+<head>
+    <title>홈</title>
+</head>
+<div layout:fragment="content">
+    <h1>관리자 홈</h1>
+</div>
+</html>
