--- a/src/main/resources/templates/domain/post/b/list.html
+++ b/src/main/resources/templates/domain/post/b/list.html
@@ -1,4 +1,8 @@
-<html layout:decorate="~{domain/global/layout/layout}">
+<html layout:decorate="~{domain/global/layout/usrLayout}">
+
+<head>
+    <title>유저 리스트</title>
+</head>
 
 <div layout:fragment="content" class="overflow-x-auto" >
     <table class="table">
