--- a/src/main/resources/templates/domain/post/post/detail.html
+++ b/src/main/resources/templates/domain/post/post/detail.html
@@ -1,4 +1,8 @@
-<html layout:decorate="~{domain/global/layout/layout}">
+<html layout:decorate="~{domain/global/layout/usrLayout}">
+
+<head>
+    <title>상세</title>
+</head>
 
 <div layout:fragment="content" class="p-2">
     <h1 class="font-bold text-center mb-2"><i class="fa-regular fa-newspaper"></i> 글 내용</h1>
