--- a/src/main/resources/templates/domain/home/home/adm/about.html
+++ b/src/main/resources/templates/domain/home/home/adm/about.html
@@ -1,1 +1,8 @@
-관리자 설명
+<html layout:decorate="~{domain/global/layout/admLayout}">
+<head>
+    <title>설명</title>
+</head>
+<div layout:fragment="content">
+    <h1>관리자 설명</h1>
+</div>
+</html>
