--- a/src/main/resources/templates/domain/member/member/join.html
+++ b/src/main/resources/templates/domain/member/member/join.html
@@ -1,4 +1,8 @@
-<html layout:decorate="~{domain/global/layout/layout}">
+<html layout:decorate="~{domain/global/layout/usrLayout}">
+
+<head>
+    <title>회원가입</title>
+</head>
 
 <div layout:fragment="content" class="p-2">
 <div class="my-3 border-bottom">
