--- a/src/main/resources/templates/domain/post/comment/write.html
+++ b/src/main/resources/templates/domain/post/comment/write.html
@@ -1,4 +1,8 @@
-<html layout:decorate="~{domain/global/layout/layout}">
+<html layout:decorate="~{domain/global/layout/usrLayout}">
+
+<head>
+    <title>코멘트</title>
+</head>
 
 <div layout:fragment="content" class="p-2">
     <body>
