--- a/src/main/resources/templates/domain/post/post/list.html
+++ b/src/main/resources/templates/domain/post/post/list.html
@@ -1,6 +1,7 @@
-<html layout:decorate="~{domain/global/layout/layout}">
-
-
+<html layout:decorate="~{domain/global/layout/usrLayout}">
+<head>
+    <title>리스트</title>
+</head>
 
 <div layout:fragment="content" class="overflow-x-auto" >
     <form method="get" action="/post/list" th:unless="${myPage}">
