--- a/src/main/resources/templates/domain/post/post/write.html
+++ b/src/main/resources/templates/domain/post/post/write.html
@@ -1,4 +1,8 @@
-<html layout:decorate="~{domain/global/layout/layout}">
+<html layout:decorate="~{domain/global/layout/usrLayout}">
+
+<head>
+    <title>작성</title>
+</head>
 
 <div layout:fragment="content" class="p-2">
     <h1 class="font-bold text-center mb-2"><i class="fa-solid fa-pen"></i> 게시물 작성</h1>
