--- a/src/main/resources/templates/domain/global/layout/layout.html
+++ b/src/main/resources/templates/domain/global/layout/layout.html
@@ -41,6 +41,7 @@
             <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
                 <li><a href="/post/list"><i class="fa-solid fa-list"></i> 게시물 리스트</a></li>
                 <li><a href="/post/write"><i class="fa-solid fa-pen"></i> 게시물 작성</a></li>
+                <li><a sec:authorize="hasRole('ADMIN')" th:href="@{/adm}"><i class="fa-solid fa-pen"></i> 관리자 홈</a></li>
                 <li><a sec:authorize="isAnonymous()" th:href="@{/member/join}"><i class="fa-solid fa-user-plus"></i> 회원가입</a></li>
                 <li><a sec:authorize="isAuthenticated()" th:href="@{/post/myList}" ><i class="fa-solid fa-user"></i> 내 글 리스트</a></li>
                 <li><a sec:authorize="isAnonymous()" th:href="@{/member/login}" ><i class="fa-solid fa-right-to-bracket"></i> 로그인</a></li>
