--- a/src/main/resources/templates/domain/member/member/login.html
+++ b/src/main/resources/templates/domain/member/member/login.html
@@ -23,6 +23,10 @@
             <input type="password" name="password" id="password" class="form-control border-2 border-gray-500 focus:outline-none focus:border-black-500 rounded-md">
         </div>
         <button type="submit" class="btn btn-outline">로그인</button>
+        <hr>
+        <a class="btn btn-primary" href="/oauth2/authorization/kakao">
+            카카오 로그인
+        </a>
     </form>
 </div>
 </html>
